// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="components-field-border-m__container"
>
  <div
    id="child"
  />
</div>
`;

exports[`should render correctly with a style 1`] = `
<div
  className="components-field-border-m__container"
  style={
    Object {
      "marginLeft": 5,
    }
  }
>
  <div
    id="child"
  />
</div>
`;
